com/sun/faces/test/servlet30/invalidMapping/maven-metadata.xml.sha1
3c8c0f0a96d1c6aa05050296b4b55f9f2461ed48